Bug 1516361 - Remove code for painting text selection behind the background when background-clip:text is set. r=jfkthame,emilio

Differential Revision: https://phabricator.services.mozilla.com/D17320